# opencv_draw_text_sample

./: CMakeLists.txt  main.cpp
